--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "marine-ecommerce-app",
+  "homepage": "https://newsoko.org/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
